--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -143,6 +143,10 @@ nav.landing a {
     padding-top: 150px;
 }
 
+.judul{
+    margin-top: -50px;
+}
+
 .judul h4 {
     color: #faa823;
 }
@@ -154,7 +158,7 @@ nav.landing a {
 .paragraf::before {
     content: "";
     position: absolute;
-    top: 90px;
+    top: 40px;
     left: 20px;
     right: 0;
     width: 50px;
@@ -208,7 +212,7 @@ nav.landing a {
 }
 
 .detail-hadiah div div h5 {
-    margin-bottom: 40px;
+    margin-bottom: 16px;
 }
 
 .jadwal::before {
