--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -43,10 +43,10 @@ nav.landing a {
     left: 0;
     z-index: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     z-index: 0;
-    background-image: url('../video/bg3.svg');
+    background-image: url('../img/bg3.png');
 }
 
 .section-video video {
@@ -65,7 +65,7 @@ nav.landing a {
 }
 
 .bg-inner-video {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: linear-gradient(to bottom, rgba(33, 33, 33, 0) 0%, rgba(33, 33, 33, 0.5) 50%, rgba(33, 33, 33, 1) 100%);
     position: absolute;
@@ -428,6 +428,24 @@ nav.landing a {
 .footer-telepon,
 .footer-socmed {
     margin-top: 50px;
+}
+
+/* tambahan */
+.navbar-dashboard{
+    padding: 0 !important;
+}
+
+#wrapper{
+    background-color: #edf1f5;
+}
+.panel-default .panel-body, .panel-white .panel-body{
+    background-color: #fff;
+}
+.in{
+    opacity: 1;
+}
+.block{
+    display: block;
 }
 
 @media (min-width: 320px) and (max-width: 424px) {
