--- a/src/assets/css/group.css
+++ b/src/assets/css/group.css
@@ -1,9 +1,9 @@
 nav.team {
-    background-color: orange;
+    background-color: #3c4451;
 }
 
 nav.team a {
-    background: -webkit-linear-gradient( 0deg, rgb(255, 255, 255) 0%, rgba(2255, 255, 255) 0%, rgb(255, 255, 255) 100%);
+    background: -webkit-linear-gradient(0deg, rgba(246, 211, 101, 0.8) 0%, rgba(250, 186, 117, 0.89) 46%, rgb(253, 160, 133) 100%);    
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
