--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -247,7 +247,7 @@ nav.landing a {
 .timeline_item_icon {
     width: 30px;
     height: 30px;
-    background: #fadd23;
+    background: #f8be37;
     border-radius: 50%;
     font-size: 30px;
     line-height: 40px;
@@ -267,7 +267,7 @@ nav.landing a {
     left: 25%;
     height: 85%;
     width: 4px;
-    background: #fadd23;
+    background: #f8be37;
 }
 
 /* Section 2 */
@@ -444,7 +444,15 @@ input[type=text] {
     border-radius: 20px;
     border: 1px solid #C4C4C4;
     outline: none;
-    padding: 8px;
+    padding: 8px 12px;
+}
+
+input[type=number] {
+    width: 100%;
+    border-radius: 20px;
+    border: 1px solid #C4C4C4;
+    outline: none;
+    padding: 8px 12px;
 }
 
 .input-group {
@@ -576,7 +584,7 @@ bottom .register {
     border: 1px solid #C4C4C4;
     background-color: transparent;
     outline: none;
-    padding: 8px;
+    padding: 12px 8px;
 }
 
 /* tambahan */
@@ -673,6 +681,24 @@ bottom .register {
     width: 30%
 }
 
+.btn-user {
+    border-radius: 24px;
+    background-image: -webkit-gradient(linear, left top, right top, from(#f6d365), color-stop(51%, #fda085), to(#f6d365));
+    background-image: -webkit-linear-gradient(left, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    background-image: -o-linear-gradient(left, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    -webkit-box-shadow: 0px 9px 24px 0px rgba(0, 0, 0, 0.23);
+    box-shadow: 0px 9px 24px 0px rgba(0, 0, 0, 0.23);
+    height: 50px;
+    z-index: 35;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 1vh;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+    background-size: 200% auto;
+}
 @media (min-width: 768px) and (max-width: 1023px) {
     .timeline::before {
         left: 17%;
@@ -718,10 +744,14 @@ bottom .register {
         font-size: 18px;
         margin-top: 96px;
     }
-    .basket-person{
-        margin-top: -64px;
-        width: 70%;
-        margin-bottom: 48px;
+    .basket-person {
+        margin-top: 0px;
+        width: 100%;
+        margin-bottom: 0px;
+        opacity: 0.2;
+        position: absolute;
+        left: 0;
+        top: 64px;
     }
     .text-center-xs{
         text-align: center;
@@ -730,7 +760,7 @@ bottom .register {
         font-size: 24px;
     }
     .paragraf::before {
-        top: 85px;
+        top: 30px;
     }
     .motif2{
         display: none;
