--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -430,6 +430,14 @@ input[type=text] {
     padding: 8px 12px;
 }
 
+input[type=password] {
+    width: 100%;
+    border-radius: 20px;
+    border: 1px solid #C4C4C4;
+    outline: none;
+    padding: 8px 12px;
+}
+
 input[type=number] {
     width: 100%;
     border-radius: 20px;
