--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -21,6 +21,14 @@ nav.landing a {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
+    transition-duration: 3s;
+}
+
+nav.landing a:hover{
+    background: -webkit-linear-gradient(0deg, rgb(253, 160, 133) 0%, rgba(250, 186, 117, 0.89) 46%, rgba(246, 211, 101, 0.8) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
 }
 
 .activeNavLanding {
@@ -144,7 +152,7 @@ nav.landing a {
     width: 100%;
     height: auto;
     padding-bottom: 150px;
-    padding-top: 150px;
+    padding-top: 140px;
 }
 
 .judul{
@@ -446,6 +454,12 @@ input[type=number] {
     padding: 8px 12px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .input-group {
     width: 100%;
     margin-bottom: 22px;
@@ -515,6 +529,11 @@ input[type=number] {
     background-color: #F47E00;
     color: white !important;
 }
+
+.btn-oren:hover {
+    cursor: pointer;
+}
+
 .button {
     border-radius: 20px;
     text-align: center;
@@ -647,7 +666,7 @@ bottom .register {
 }
 
 .navbar-brand{
-    padding: 0;
+    padding: 8px;
 }
 
 .navbar-nav {
@@ -658,6 +677,10 @@ bottom .register {
     padding: 4px 0;
     font-size: 16px;
     margin: 4px 4px;
+}
+
+.navbar-nav .nav-link:hover {
+    cursor: pointer;
 }
 
 .navbar{
