--- a/src/assets/css/group.css
+++ b/src/assets/css/group.css
@@ -4,6 +4,7 @@ nav.team {
 
 nav.team a {
     background: -webkit-linear-gradient(0deg, rgba(246, 211, 101, 0.8) 0%, rgba(250, 186, 117, 0.89) 46%, rgb(253, 160, 133) 100%);    
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
@@ -12,6 +13,7 @@ nav.team a {
 
 nav.team a:hover {
     background: -webkit-linear-gradient(0deg, rgb(253, 160, 133) 0%, rgba(250, 186, 117, 0.89) 46%, rgba(246, 211, 101, 0.8) 100%);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
