mbo opo ae akeh sampe lali

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -726,6 +726,53 @@ bottom .register {
     font-size: 32px !important;
 }
 
+.form-material .form-control {
+    padding: 0 12px !important;
+}
+
+.btn-default {
+    background-color: #3c4451;
+    color: white;
+}
+
+.custom-add-file-title {
+    position: absolute;
+    left: 0;
+    top: 200%;
+    padding: 32px;
+    opacity: 1;
+    cursor: pointer;
+    width: 100%;
+}
+
+.custom-add-file {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 32px;
+    opacity: 0.2;
+    cursor: pointer;
+}
+.btn-submit {
+    z-index: 999;
+}
+.custom-file-add {
+    position: relative;
+    width: 100%;
+    z-index: 2;
+    height: 300px;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+}
+.custom-file-add-after {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+}
 @media (min-width: 768px) and (max-width: 1023px) {
     .timeline::before {
         left: 17%;
