--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -656,6 +656,17 @@ bottom .register {
     margin-top: -10px;
     float: right;
 }
+.comment-center .user-img img {
+    border-radius: 4px;
+}
+.sertifikat{
+    width: 75px !important;
+    left: 24px !important;
+}
+.txt-pelatih{
+    padding-left: 40px !important;
+}
+
 .wrapper-syarat{
     width: 80%;
     min-height: 300px;
