landing page revisi kurang testimoni

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -602,6 +602,10 @@ bottom .register {
 }
 
 /* tambahan */
+.text-oren {
+    color : #faa823;
+}
+
 .navbar-dashboard{
     padding: 0 !important;
 }
