--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -606,6 +606,10 @@ bottom .register {
     color : #faa823;
 }
 
+.clickable {
+    cursor: pointer;
+}
+
 .navbar-dashboard{
     padding: 0 !important;
 }
