--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -126,6 +126,25 @@ nav.landing a:hover{
     background-position: right center;
 }
 
+.btn-daftar-inverse {
+    border-radius: 24px;
+    background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+    box-shadow: 0px 9px 24px 0px rgba(0, 0, 0, 0.23);
+    width: 215px;
+    height: 50px;
+    z-index: 35;
+    font-weight: 700;
+    font-size: 24px;
+    margin-top: 10vh;
+    transition: 0.5s;
+    background-size: 200% auto;
+    background-position: right center;
+}
+
+.btn-daftar-inverse:hover {
+    background-position: left center;
+}
+
 /* POV */
 /*section 1*/
 @font-face {
@@ -154,7 +173,7 @@ nav.landing a:hover{
 .section1 {
     width: 100%;
     height: auto;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
     padding-top: 135px;
 }
 
@@ -201,11 +220,11 @@ nav.landing a:hover{
 .section2 {
     width: 100%;
     height: auto;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
 }
 
 .section-hadiah {
-    padding-bottom: 150px;
+    padding-bottom: 50px;
 }
 
 .hadiah::before {
@@ -286,7 +305,7 @@ nav.landing a:hover{
 .section3 {
     width: 100%;
     height: auto;
-    padding-bottom: 150px;
+    padding-bottom: 50px;
 }
 
 .galeri::after {    
