--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,7 +44,7 @@ nav.landing a:hover{
 /* POV */
 .bg-video {
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     top: 0;
     left: 0;
     z-index: -1;
@@ -57,7 +57,7 @@ nav.landing a:hover{
     left: 0;
     z-index: 0;
     width: 100%;
-    height: 100vh;
+    height: 105vh;
     overflow: hidden;
     z-index: 0;
     background-image: url('../img/bg3.png');
@@ -79,7 +79,7 @@ nav.landing a:hover{
 }
 
 .bg-inner-video {
-    height: 100vh;
+    height: 105vh;
     width: 100%;
     background: linear-gradient(to bottom, rgba(33, 33, 33, 0) 0%, rgba(33, 33, 33, 0.5) 50%, rgba(33, 33, 33, 1) 100%);
     position: absolute;
@@ -173,7 +173,7 @@ nav.landing a:hover{
 .section1 {
     width: 100%;
     height: auto;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
     padding-top: 135px;
 }
 
@@ -220,11 +220,11 @@ nav.landing a:hover{
 .section2 {
     width: 100%;
     height: auto;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .section-hadiah {
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .hadiah::before {
@@ -305,7 +305,7 @@ nav.landing a:hover{
 .section3 {
     width: 100%;
     height: auto;
-    padding-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .galeri::after {    
@@ -332,7 +332,7 @@ nav.landing a:hover{
 .section4 {
     width: 100%;
     height: auto;
-    padding-bottom: 150px;
+    padding-bottom: 100px;
 }
 
 .testimoni::after {
@@ -708,7 +708,7 @@ bottom .register {
 }
 
 .navbar-brand{
-    padding: 8px;
+    padding: 4px;
 }
 
 .navbar-nav {
@@ -730,7 +730,7 @@ bottom .register {
 }
 
 .navbar-brand {
-    width: 40%
+    width: 50%
 }
 
 .navbar-brand img {
@@ -910,7 +910,7 @@ bottom .register {
     }
     
     .navbar-brand img {
-        width: 60%
+        width: 70%
     }
 
     .video-gambar {
@@ -937,7 +937,13 @@ bottom .register {
         width: 205px;
         height: 40px;
         font-size: 18px;
-        margin-top: 96px;
+        margin-top: 30px;
+    }
+    .btn-daftar-inverse {
+        width: 205px;
+        height: 40px;
+        font-size: 18px;
+        margin-top: 10px;
     }
     .basket-person {
         margin-top: 0px;
