--- a/src/assets/css/group.css
+++ b/src/assets/css/group.css
@@ -32,7 +32,7 @@ nav.team a:hover {
 }
 
 .putra {
-    margin-top: 24px;
+    margin-top: 16px;
 }
 
 .putra thead {
@@ -45,7 +45,7 @@ nav.team a:hover {
 }
 
 .match {
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
 .match .col-md-12 {
@@ -53,5 +53,6 @@ nav.team a:hover {
 }
 
 .pertandingan tr {
-    border: 1px solid #dee2e6;
+    border: 1px solid #e4e7ea;
+    box-shadow: 0px 0px 5px 1px #3c4451;
 }
