--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1008,3 +1008,18 @@ bottom .register {
         width: 100%;
     }
 }
+
+.tb-left {
+    text-align: left;
+    width: 40%;
+    padding-left: 20px !important;
+}
+.tb-center {
+    text-align: center;
+    width: 20%;
+}
+.tb-right {
+    text-align: right;
+    width: 40%;
+    padding-right: 20px !important;
+}
